서버에서 생성된 JSON 파일을 불러오기 버튼을 통해 값을 가져옴

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Calender Test</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="baseUrl">http://211.248.178.162:33060</string>
+
 </resources>
